# asio_socket

./: CMakeLists.txt  README.md  client.cpp  packer.cpp  server.cpp  talk_to_client.cpp  talk_to_server.cpp  unpacker.cpp
.git-bak/: COMMIT_EDITMSG  config  index  packed-refs
.git-bak/logs/: HEAD
.git-bak/logs/refs/heads/: dev  master
.git-bak/logs/refs/remotes/origin/: HEAD  dev
.git-bak/refs/heads/: master
demo/client/: CMakeLists.txt  client-local.cpp.bak  client-ssl.cpp.bak  client-tcp.cpp.bak  client.cpp  client.cpp-demo  client.cpp.bak
demo/server/: CMakeLists.txt  server-local.cpp.bak  server-ssl.cpp.bak  server.cpp  server.cpp.bak
demo/tranfile_client/: CMakeLists.txt  tranfile_client.cpp
demo/tranfile_server/: CMakeLists.txt  tranfile_server.cpp
include/: a_timer.h  client.h  common.h  hb_log4def.h  packer.h  server.h  talk_to_client.h  talk_to_server.h  unpacker.h
